- Allow Civilopedia descriptions for units, civilizations, and game concepts to span multiple pages
- Option to prevent units from upgrading past an intermediate type that does not have the upgrade ability
  - Setting named prevent_old_units_from_upgrading_past_ability_block
- Fix AI players being able to sacrifice units that don't have the sacrifice special ability set on their type
- Option to tint coast and sea tiles on minimap based on cultural borders
  - Setting named show_territory_colors_on_water_tiles_in_minimap, off by default
- Do not charge maintenance for buildings provided for free by shared wonder effects

* RELEASE 24
- Option to share wonders among human players in hotseat mode, setting named share_wonders_in_hotseat
- AI routine for "caravan units", which are modded units whose purpose is to be disbanded for shields
  - Controlled by config option enable_caravan_unit_ai
- Experimental option to move the game's trade net object to a different location in memory named move_trade_net_object
- Delete any AI units that somehow end up off the map to fix a rare crash, setting named delete_off_map_ai_units
- Fix pathfinder bug (see config for details), setting named patch_premature_truncation_of_found_paths
- Fix crash due to division by zero when cities have zero production, setting named patch_zero_production_crash
- Fix icons for different kinds of specialist yields obscuring each other, setting named fix_overlapping_specialist_yield_icons
- Correct typo in name of share_visibility_in_hotseat setting. The old, incorrect name still works as an alias.

* RELEASE 23
- Include AMB editor
- Option to throttle AI's expansion by temporarily applying perfume to settlers each time it founds a city
  - Controlled by two settings named ai_settler_perfume_on_founding(_duration)
- Disallow trespassing setting kicks trespassers out of each player's territory at the start of their turn and after signing peace