@@ -130,6 +130,13 @@ do_not_make_capital_cities_appear_larger = false
 ; Tints coast and sea tiles on the minimap based on the culture that controls them, like is normally done for land tiles.
 show_territory_colors_on_water_tiles_in_minimap = false
 
+; In offline games, shows some popup messages as online-multiplayer-style notes to the left of the screen instead of advisor popups that pause
+; gameplay until dismissed. The point is to minimize interruptions during turn processing. Affects popups with the following text keys:
+; SUMMARY_END_GOLDEN_AGE, SUMMARY_END_SCIENCE_AGE, SUMMARY_NEW_SMALL_WONDER, WONDERPRODUCE, MAKEPEACE, MUTUALPROTECTIONPACT, MILITARYALLIANCE,
+; SUMMARY_DECLARE_WAR, TRADEEMBARGOENDS, SUMMARY_CIV_DESTROYED_BY_CIV, SUMMARY_CIV_DESTROYED, LOSTGOOD, TRADEEMBARGO, MILITARYALLIANCEWARONUS,
+; MILITARYALLIANCEAGAINSTUS, and SUMMARY_TRAVELERS_REPORT.
+convert_some_popups_into_online_mp_messages = true
+
 [====================]
 [=== OPTIMIZATION ===]
 [====================]
